# claude-trading-strategies

./: .gitignore  2X_STRATEGY_RESULTS.md  ACCURACY_IMPROVEMENTS_SUMMARY.md  ACTUAL_OUTPUTS.md  ADAPTIVE_REGIME_STRATEGY.pine  ADAPTIVE_STRATEGY_FIXES.md  ADAPTIVE_STRATEGY_GUIDE.md  ADVANCED_QUANT_STRATEGY_FIXED.pine  ADVANCED_QUANT_STRATEGY_README.md  COMMANDS.md  DELIVERY_SUMMARY.md  ENHANCED_BACKTESTER_README.md  EVIDENCE_BASED_STRATEGY_RESEARCH.md  EVIDENCE_TREND_SIMPLE.pine  FINAL_DELIVERY_SUMMARY.md  FINAL_STATUS_REPORT.md  FINAL_STRATEGY_SUMMARY.md  FIXES_APPLIED.md  GITHUB_INTEGRATION_GUIDE.md  GITHUB_SETUP_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LIVE_TEST_SIMULATION.md  MAXIMUM_PROFIT_GUIDE.md  MAXIMUM_PROFIT_STRATEGY.pine  MEMORY_FILE.md  QUICKSTART_ACCURACY.md  QUICKSTART_ADVANCED_QUANT.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  README.md  README_ACCURACY_IMPROVEMENTS.md  RESEARCH_ANALYSIS_AND_RECOMMENDATION.md  SESSION_SUMMARY_FOR_GOOGLE_DOC.md  SIMPLE_MOMENTUM_STRATEGY.pine  SPY_MULTIFACTOR_GUIDE.md  SPY_MULTIFACTOR_QUANT.pine  STRATEGY_FIX_GUIDE.md  STRATEGY_READY.md  STRATEGY_TEST_RESULTS.md  TESTED_AND_READY.md  (+22 more)
.claude/: settings.local.json
backtest_app/: README.md  app.py  backtest_runner.py  requirements.txt
backtest_app/static/: app.js  (+2 more)
data/: SPY_sample.csv
docs/: TRADINGVIEW_ACCURACY.md
examples/: README.md  quickstart.py
strategies/: ADVANCED_QUANT_STRATEGY.pine  README.md  SIMPLE_QUANT_2X_STRATEGY.pine  SIMPLE_TREND_FOLLOWING.pine
tests/: test_fees_slippage.py  test_fills.py  test_indicators.py  test_no_lookahead.py  test_smoke.py
(+45 files in other folders)
